[FIX]: make the square visible by adding a character in it

--- a/task08/codingpedia.css
+++ b/task08/codingpedia.css
@@ -23,6 +23,7 @@
     animation-name: myAnime;
     animation-duration: 5s;
     animation-iteration-count: 5;
+    z-index: 2;
 }
 
 @keyframes myAnime {
